i have a centered text, next commit will be to put it vertically centered too

--- a/scripts/analogclock.html
+++ b/scripts/analogclock.html
@@ -1,91 +1,11 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="clock.css">
 <p>hi</p>
-<div id='clock'>
-  <head>
-    <title>Analog</title>
-    <link rel="icon" type="image/x-icon" href="pics\helloextentions2.ico">
-  </head>
-<ul class='hours'>
-  <li>
-    <span>
-      1
-    </span>
-  </li>
-  <li>
-    <span>
-      2
-    </span>
-  </li>
-  <li>
-    <span>
-      3
-    </span>
-  </li>
-  <li>
-    <span>
-      4
-    </span>
-  </li>
-  <li>
-    <span>
-      5
-    </span>
-  </li>
-  <li>
-    <span>
-      6
-    </span>
-  </li>
-  <li>
-    <span>
-      7
-    </span>
-  </li>
-  <li>
-    <span>
-      8
-    </span>
-  </li>
-  <li>
-    <span>
-      9
-    </span>
-  </li>
-  <li>
-    <span>
-      10
-    </span>
-  </li>
-  <li>
-    <span>
-      11
-    </span>
-  </li>
-  <li>
-    <span>
-      
-    </span>
-  </li>
-  <li>
-    <span id="date">
-      Mon, Feb 13
-    </span>
-  </li>
-</ul>
+
+<h1 style="text-align:center" id="main_time">13:25</h1>
 
 
-<div class='hr-wrapper'>
-  <div class='hand hr'></div>
-</div>
-<div class='min-wrapper'>
-  <div class='hand min'></div>
-</div>
-<div class='sec-wrapper'>
-  <div class='hand sec'></div>
-</div>
 
-</div>
 
 
 
