--- a/scripts/analogclock.html
+++ b/scripts/analogclock.html
@@ -50,13 +50,15 @@
 			background-color: #333;
 		}
 	</style>
+
 </head>
 <body>
 	<div class="clock">
-      13:34 PM
+      <p>ji</p>
 		</div>
 	</div>
 	<img src="pics\test_svg.svg" alt="Flowers in Chania">
 
 </body>
+<script src=clock.js></script>
 </html>
