last commit before im trying to swtich from normal to paperjs

--- a/scripts/analogclock.html
+++ b/scripts/analogclock.html
@@ -3,10 +3,12 @@
 <head>
 	<title>Digital Clock</title>
 	<link rel="stylesheet" type="text/css" href="clock.css">
-
+	<style>
+		
+	</style>
 </head>
 <body>
-
+	<canvas id="drawCanvas"></canvas>
 	<div class="clock">
 		<span id="h2" class="digit2"><span>0</span></span>	
 		<span id="h1" class="digit1"><span>0</span></span>
@@ -56,4 +58,5 @@
 
 </body>
 <script src=clock.js></script>
+<script type="text/javascript" src="js/paper.js"></script>
 </html>
