moving over to music player

--- a/scripts/analogclock.html
+++ b/scripts/analogclock.html
@@ -3,12 +3,10 @@
 <head>
 	<title>Digital Clock</title>
 	<link rel="stylesheet" type="text/css" href="clock.css">
-	<style>
-		
-	</style>
+
 </head>
 <body>
-	<canvas id="drawCanvas"></canvas>
+	
 	<div class="clock">
 		<span id="h2" class="digit2"><span>0</span></span>	
 		<span id="h1" class="digit1"><span>0</span></span>
@@ -53,10 +51,14 @@
 		</div>
 	  </div>
 	<!-- <img src="pics\test_svg.svg" alt="Flowers in Chania" > -->
+	<video autoplay loop muted>
+		<source src="lofig.mp4" type="video/mp4"
+	</video>
 
 
 
 </body>
 <script src=clock.js></script>
-<script type="text/javascript" src="js/paper.js"></script>
+
+
 </html>
