--- a/scripts/analogclock.html
+++ b/scripts/analogclock.html
@@ -2,11 +2,51 @@
 <html>
 <head>
 	<title>Digital Clock</title>
+	  <!-- Load FontAwesome icons -->
+	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+	  <!-- Load the actual css please-->
 	<link rel="stylesheet" type="text/css" href="clock.css">
 
 </head>
 <body>
-	
+	<div class="player">
+ 
+		<!-- Define the section for displaying details -->
+		<div class="details">
+		  <div class="now-playing">PLAYING x OF y</div>
+		  <div class="track-name">Track Name</div>
+		  <div class="track-artist">Track Artist</div>
+		</div>
+	 
+		<!-- Define the section for displaying track buttons -->
+		<div class="buttons">
+		  <div class="prev-track" onclick="prevTrack()">
+			<i class="fa fa-step-backward fa-2x"></i>
+		  </div>
+		  <div class="playpause-track" onclick="playpauseTrack()">
+			<i class="fa fa-play-circle fa-5x"></i>
+		  </div>
+		  <div class="next-track" onclick="nextTrack()">
+			<i class="fa fa-step-forward fa-2x"></i>
+		  </div>
+		</div>
+	 
+		<!-- Define the section for displaying the seek slider-->
+		<div class="slider_container">
+		  <div class="current-time">00:00</div>
+		  <input type="range" min="1" max="100"
+			value="0" class="seek_slider" onchange="seekTo()">
+		  <div class="total-duration">00:00</div>
+		</div>
+	 
+		<!-- Define the section for displaying the volume slider-->
+		<div class="slider_container">
+		  <i class="fa fa-volume-down"></i>
+		  <input type="range" min="1" max="100"
+			value="99" class="volume_slider" onchange="setVolume()">
+		  <i class="fa fa-volume-up"></i>
+		</div>
+	  </div>
 	<div class="clock">
 		<span id="h2" class="digit2"><span>0</span></span>	
 		<span id="h1" class="digit1"><span>0</span></span>
@@ -55,10 +95,19 @@
 		<source src="lofig.mp4" type="video/mp4"
 	</video>
 
+	<!-- 
+███╗░░░███╗██╗░░░██╗░██████╗██╗░█████╗░  ██████╗░██╗░░░░░░█████╗░██╗░░░██╗███████╗██████╗░
+████╗░████║██║░░░██║██╔════╝██║██╔══██╗  ██╔══██╗██║░░░░░██╔══██╗╚██╗░██╔╝██╔════╝██╔══██╗
+██╔████╔██║██║░░░██║╚█████╗░██║██║░░╚═╝  ██████╔╝██║░░░░░███████║░╚████╔╝░█████╗░░██████╔╝
+██║╚██╔╝██║██║░░░██║░╚═══██╗██║██║░░██╗  ██╔═══╝░██║░░░░░██╔══██║░░╚██╔╝░░██╔══╝░░██╔══██╗
+██║░╚═╝░██║╚██████╔╝██████╔╝██║╚█████╔╝  ██║░░░░░███████╗██║░░██║░░░██║░░░███████╗██║░░██║
+╚═╝░░░░░╚═╝░╚═════╝░╚═════╝░╚═╝░╚════╝░  ╚═╝░░░░░╚══════╝╚═╝░░╚═╝░░░╚═╝░░░╚══════╝╚═╝░░╚═╝-->
+	
+
 
 
 </body>
 <script src=clock.js></script>
-
+<script src="musicplayer.js"></script>
 
 </html>
