--- a/scripts/analogclock.html
+++ b/scripts/analogclock.html
@@ -59,6 +59,14 @@
 		<div id="player"></div>
 	  </div>
 	  <button id="play-button" class="button">Play Livestream</button>   
+
+	  <div id="chatbot-container">
+		<div id="chatbot-title">Chat with ChatGPT</div>
+		<div id="chatbot-dialogue"></div>
+		<input type="text" id="chatbot-input" placeholder="Enter your message...">
+	  </div>
+	  
+	  <script src="chatbot.js"></script>
 	<!-- <img src="pics\test_svg.svg" alt="Flowers in Chania" > -->
 	<!--
 	<video autoplay loop muted>
@@ -66,15 +74,7 @@
 	</video>		
 	-->
 
-	
 
-	<!-- 
-███╗░░░███╗██╗░░░██╗░██████╗██╗░█████╗░  ██████╗░██╗░░░░░░█████╗░██╗░░░██╗███████╗██████╗░
-████╗░████║██║░░░██║██╔════╝██║██╔══██╗  ██╔══██╗██║░░░░░██╔══██╗╚██╗░██╔╝██╔════╝██╔══██╗
-██╔████╔██║██║░░░██║╚█████╗░██║██║░░╚═╝  ██████╔╝██║░░░░░███████║░╚████╔╝░█████╗░░██████╔╝
-██║╚██╔╝██║██║░░░██║░╚═══██╗██║██║░░██╗  ██╔═══╝░██║░░░░░██╔══██║░░╚██╔╝░░██╔══╝░░██╔══██╗
-██║░╚═╝░██║╚██████╔╝██████╔╝██║╚█████╔╝  ██║░░░░░███████╗██║░░██║░░░██║░░░███████╗██║░░██║
-╚═╝░░░░░╚═╝░╚═════╝░╚═════╝░╚═╝░╚════╝░  ╚═╝░░░░░╚══════╝╚═╝░░╚═╝░░░╚═╝░░░╚══════╝╚═╝░░╚═╝-->
 	
 
 
